--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
     sdk: flutter
   flutter_screenutil: ^5.9.0
   share_plus: ^7.0.1
+  image_picker: ^1.0.4
+  permission_handler: ^11.0.1
 
   
 
@@ -46,6 +48,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
   
 
   # The "flutter_lints" package below contains a set of recommended lints to
