--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   share_plus: ^7.0.1
   image_picker: ^1.0.4
   permission_handler: ^11.0.1
+  provider: ^6.1.1
+  shared_preferences: ^2.2.2
+  path_provider: ^2.1.1
+
 
   
 
